--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon -L ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,7 +12,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mariadb": "^2.5.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sequelize": "^6.6.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -21,6 +22,8 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint-plugin-promise": "^5.1.0",
+    "nodemon": "^2.0.12",
+    "sequelize-cli": "^6.2.0"
   }
 }
