--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@vue/cli": "^4.5.13",
+    "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
