--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.4",
     "morgan": "~1.9.1",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.1.3",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
