--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ eslint:
   stage: lint
   tags:
     - Test
+  only:
+    - merge_requests
   script:
     # Install eslint
     - npm config set registry https://registry.npm.taobao.org
@@ -63,7 +65,6 @@ sonarqube-check:
   allow_failure: true
   only:
     - master
-    # - master # or the name of your main branch
 
 # build-job:
 #   stage: build
