Add apidoc of user and team which can be seen in root directory. Ref #68, #72

--- a/backend/db/config/config.json
+++ b/backend/db/config/config.json
@@ -9,7 +9,7 @@
   "test": {
     "username": "root",
     "password": "password",
-    "database": "database_test",
+    "database": "database_development",
     "host": "mariadb",
     "dialect": "mariadb"
   },
