--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,8 @@
 sonar.projectKey=Rich_Media_Platform_FingerUniverse_conferenceroom_AXrnP7Y2d4w-0VONNi3x
 sonar.qualitygate.wait=true
+sonar.testExecutionReportPaths=./frontend/test-report.xml
+#  ./backend/test-report.xml
+sonar.sources=.
+sonar.tests=./frontend/src/_tests_, ./backend/test
+sonar.test.inclusions=**/*.test.js
+# sonar.coverageReportPaths=./frontend/test-report.xml
