--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,16 @@
 stages:
   - lint
-  - build
-  - test
+  - test-frontend
+  # - test-backend
+  # - build
   - codequality
-  - deploy
+  # - deploy
 
-cache:
-  key: dependencies
-  paths:
-   - ./frontend/node_modules/
-   - ./backend/node_modules/
+# cache:
+#   key: "${CI_COMMIT_REF_SLUG}"
+#   paths:
+#    - ./frontend/node_modules/
+#    - ./backend/node_modules/
 
 eslint:
   stage: lint
@@ -17,6 +18,12 @@ eslint:
     - Test
   only:
     - merge_requests
+    - master
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME}"
+    paths:
+      - ./frontend/node_modules/
+      - ./backend/node_modules/
   script:
     # Install eslint
     - npm config set registry https://registry.npm.taobao.org
@@ -44,14 +51,62 @@ eslint:
       eslint-plugin-promise \
       eslint-config-standard
     - node_modules/.bin/eslint .
-    #- node_modules/.bin/eslint ./backend
+
+
+
+test-frontend:
+  stage: test-frontend
+  tags:
+    - Test
+  cache:
+    key: "${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME}"
+    paths:
+      - ./frontend/node_modules/
+  only:
+    - merge_requests   
+    - master   
+  script:
+    - cd frontend
+    - npm install
+    - npm run test
+  artifacts:
+    paths:
+      - ./frontend/test-report.xml
+    expire_in: 1 hour
+
+# test-backend:
+#   stage: test-backend
+#   tags:
+#     - Test
+#   cache:
+#     key: "${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME}"
+#     paths:
+#       - ./backend/node_modules/
+#   only:
+#     - merge_requests   
+#     - master  
+#   script:
+#     - cd backend
+#     - export NODE_ENV=CI-test
+#     - npm install
+#     - npm install mysql2
+#     - cd db
+#     - npx sequelize-cli db:migrate
+#     - cd ../
+#     - npm run test
+#   artifacts:
+#     paths:
+#       - ./backend/test-report.xml
+#     expire_in: 1 hour
+#   allow_failure: true
+    
 
 sonarqube-check:
   stage: codequality
   tags:
     - Test
   image: 
-    name: sonarsource/sonar-scanner-cli:latest
+    name: sonarsource/sonar-scanner-cli:4.6
     entrypoint: [""]
   variables:
     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
@@ -66,24 +121,3 @@ sonarqube-check:
   only:
     - master
 
-# build-job:
-#   stage: build
-#   tags: 
-#     - Test
-#   script:
-#     - echo "Hello, $GITLAB_USER_LOGIN!"
-
-# test-job1:
-#   stage: test
-#   tags:
-#     - Test
-#   script:
-#     - echo "This job tests something"
-
-
-# deploy-prod:
-#   stage: deploy
-#   tags: 
-#     - Test
-#   script:
-#     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
