--- a/backend/db/config/config.json
+++ b/backend/db/config/config.json
@@ -9,9 +9,16 @@
   "test": {
     "username": "root",
     "password": "password",
-    "database": "database_development",
+    "database": "database_test",
     "host": "mariadb",
     "dialect": "mariadb"
+  },
+  "CI-test": {
+    "username": "root",
+    "password": "123456",
+    "database": "CI_database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
   },
   "production": {
     "username": "root",
