--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^27.0.6",
+    "jest-sonar-reporter": "^2.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-jest": "^3.0.7",
