Add api of getting members and modify apidoc in backend. Ref #35

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,7 @@ services:
         && cd db
         && npx sequelize-cli db:migrate
         && cd ../
+        && npm run api
         && DEBUG=backend:* npm start"
 
 networks:
