--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "nodemon -L ./bin/www",
     "test": "export NODE_ENV=test && cd db && npx sequelize-cli db:migrate && cd ../ && jest && export NODE_ENV=development",
-    "api": "apidoc -i api/ -o ../apidoc/"
+    "api": "apidoc -i api/ -o apidoc/"
   },
   "dependencies": {
     "apidoc": "^0.28.1",
