Alter sonarqube server to Jisuanke. Ref #71

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
-sonar.projectKey=Rich_Media_Platform_FingerUniverse_conferenceroom_AXrnP7Y2d4w-0VONNi3x
+sonar.projectKey=Space
 sonar.qualitygate.wait=true
 sonar.testExecutionReportPaths=./frontend/test-report.xml
 #  ./backend/test-report.xml
-sonar.sources=.
+sonar.sources=./frontend, ./backend
+sonar.exclusions=./backend/db/**
+sonar.javascript.lcov.reportPaths=./frontend/coverage/lcov.info
 sonar.tests=./frontend/src/_tests_, ./backend/test
 sonar.test.inclusions=**/*.test.js
 # sonar.coverageReportPaths=./frontend/test-report.xml
