--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,11 +67,13 @@ test-frontend:
     - master   
   script:
     - cd frontend
+    - npm config set registry https://registry.npm.taobao.org
     - npm install
     - npm run test
   artifacts:
     paths:
       - ./frontend/test-report.xml
+      - ./frontend/coverage/lcov.info
     expire_in: 1 hour
 
 # test-backend:
@@ -87,6 +89,7 @@ test-frontend:
 #     - master  
 #   script:
 #     - cd backend
+#     - npm config set registry https://registry.npm.taobao.org
 #     - export NODE_ENV=CI-test
 #     - npm install
 #     - npm install mysql2
@@ -119,5 +122,6 @@ sonarqube-check:
     - sonar-scanner
   allow_failure: true
   only:
+    - merge_requests
     - master
 
