--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon -L ./bin/www",
-    "test": "export NODE_ENV=test && cd db && npx sequelize-cli db:migrate && cd ../ && jest && export NODE_ENV=development",
+    "test": "export NODE_ENV=test && cd db && npx sequelize-cli db:migrate && cd ../ && jest && cd db && npx sequelize db:migrate:undo:all && export NODE_ENV=development",
     "api": "apidoc -i api/ -o apidoc/"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "mariadb": "^2.5.4",
     "morgan": "~1.9.1",
     "sequelize": "^6.6.5",
+    "sequelize-auto": "^0.8.3",
     "socket.io": "^4.1.3",
     "socketio": "^1.0.0"
   },
