--- a/backend/package.json
+++ b/backend/package.json
@@ -11,14 +11,20 @@
   "scripts": {
     "start": "nodemon -L ./bin/www",
     "test": "export NODE_ENV=test && cd db && npx sequelize-cli db:migrate && cd ../ && jest && cd db && npx sequelize db:migrate:undo:all && export NODE_ENV=development",
-    "api": "apidoc -i api/ -o apidoc/"
+    "api": "apidoc -i api/ -o public/apidoc/"
   },
   "dependencies": {
+    "@admin-bro/express": "^3.1.0",
+    "@admin-bro/sequelize": "^1.2.1",
+    "acorn": "^8.4.1",
+    "admin-bro": "^4.0.1",
     "apidoc": "^0.28.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-formidable": "^1.2.0",
     "express-jwt": "^6.0.0",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jest": "^27.0.6",
@@ -28,7 +34,9 @@
     "sequelize": "^6.6.5",
     "sequelize-auto": "^0.8.3",
     "socket.io": "^4.1.3",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
