--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.qualitygate.wait=true
 sonar.testExecutionReportPaths=./frontend/test-report.xml
 #  ./backend/test-report.xml
 sonar.sources=./frontend, ./backend
-sonar.exclusions=backend/db/**/* , backend/models/*
+sonar.exclusions=backend/db/**/* , backend/models/* , frontend/cypress/**/*
 sonar.javascript.lcov.reportPaths=./frontend/coverage/lcov.info
 sonar.tests=./frontend/src/_tests_, ./backend/test
 sonar.test.inclusions=**/*.test.js
