--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,11 @@ stages:
 #    - ./frontend/node_modules/
 #    - ./backend/node_modules/
 
-eslint:
+lint:
   stage: lint
   tags:
     - Test
   only:
-    - merge_requests
     - master
   cache:
     key: "${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME}"
@@ -39,9 +38,12 @@ eslint:
       eslint-plugin-node \
       eslint-plugin-promise \
       eslint-plugin-standard \
-      eslint-plugin-vue
+      eslint-plugin-vue \
+      stylelint \
+      stylelint-config-standard
     # Run eslint
-    - node_modules/.bin/eslint .
+    - node_modules/.bin/eslint src
+    - node_modules/.bin/stylelint src
     - cd ../backend
     - |
       npm install --save-dev \
@@ -67,8 +69,16 @@ test-frontend:
     - master   
   script:
     - cd frontend
+    - export NODE_ENV=production
     - npm config set registry https://registry.npm.taobao.org
     - npm install
+    - |
+      npm install --save \
+      jest \
+      jest-sonar-reporter \
+      vue-jest \
+      @vue/test-utils
+    - export NODE_ENV=test
     - npm run test
   artifacts:
     paths:
