--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "lint": "npx stylelint src --fix && npx eslint src",
     "test": "jest"
   },
   "dependencies": {
@@ -13,7 +13,6 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "cypress": "^8.1.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "vue": "^2.6.11",
@@ -32,6 +31,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
     "babel-preset-env": "^1.7.0",
+    "cypress": "^8.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -42,6 +42,8 @@
     "jest-sonar-reporter": "^2.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   }
