--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,9 @@ lint:
     - Test
   only:
     - master
+    - DisableCypressInCI
   cache:
-    key: "${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME}"
+    key: "${CI_JOB_NAME}"
     paths:
       - ./frontend/node_modules/
       - ./backend/node_modules/
@@ -27,9 +28,8 @@ lint:
     # Install eslint
     - npm config set registry https://registry.npm.taobao.org
     - cd frontend
-    - npm install --save @vue/cli
     - |
-      npm install --save-dev \
+      npm install --ignore-scripts --save-dev \
       @vue/cli-plugin-eslint \
       @vue/eslint-config-standard \
       babel-eslint \
@@ -46,7 +46,7 @@ lint:
     - node_modules/.bin/stylelint src
     - cd ../backend
     - |
-      npm install --save-dev \
+      npm install --ignore-scripts --save-dev \
       eslint \
       eslint-plugin-import \
       eslint-plugin-node \
@@ -61,7 +61,7 @@ test-frontend:
   tags:
     - Test
   cache:
-    key: "${CI_COMMIT_REF_SLUG}-${CI_JOB_NAME}"
+    key: "test-frontend"
     paths:
       - ./frontend/node_modules/
   only:
@@ -69,16 +69,7 @@ test-frontend:
     - master   
   script:
     - cd frontend
-    - export NODE_ENV=production
-    - npm config set registry https://registry.npm.taobao.org
     - npm install
-    - |
-      npm install --save \
-      jest \
-      jest-sonar-reporter \
-      vue-jest \
-      @vue/test-utils
-    - export NODE_ENV=test
     - npm run test
   artifacts:
     paths:
