--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "fabric": "^4.5.1",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
