--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "@vue/cli": "^4.5.13",
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
+    "codemirror": "^5.34.0",
     "core-js": "^3.6.5",
     "fabric": "^4.5.1",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
+    "jquery": "^3.6.0",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
