Add database seeders and Test stage in pre-push hook. Ref #137

--- a/backend/db/config/config.json
+++ b/backend/db/config/config.json
@@ -4,7 +4,8 @@
     "password": "password",
     "database": "database_development",
     "host": "mariadb",
-    "dialect": "mariadb"
+    "dialect": "mariadb",
+    "seederStorage": "sequelize"
   },
   "test": {
     "username": "root",
