--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,6 +69,7 @@ test-frontend:
     - master   
   script:
     - cd frontend
+    - npm config set registry https://registry.npm.taobao.org
     - npm install
     - npm run test
   artifacts:
