--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,7 @@ test-frontend:
     - merge_requests   
     - master   
   script:
+    - npm config set registry https://registry.npm.taobao.org
     - cd frontend
     - npm config set registry https://registry.npm.taobao.org
     - npm install
