--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
+    "vuesax": "^3.12.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
