Add ConferenceToken Model And fulfill API of generate&check ConferenceToken

--- a/backend/db/config/config.json
+++ b/backend/db/config/config.json
@@ -5,7 +5,8 @@
     "database": "database_development",
     "host": "mariadb",
     "dialect": "mariadb",
-    "seederStorage": "sequelize"
+    "seederStorage": "sequelize",
+    "timezone": "+08:00"
   },
   "test": {
     "username": "root",
