--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,8 @@
     "socket.io": "^2.0.4",
     "socketio": "^1.0.0",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
