Design conference page, and add dismiss conference for founder, leave conference for member. Ref #89, #91, #95, #97

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.qualitygate.wait=true
 sonar.testExecutionReportPaths=./frontend/test-report.xml
 #  ./backend/test-report.xml
 sonar.sources=./frontend, ./backend
-sonar.exclusions=backend/db/**/* , backend/models/* , frontend/cypress/**/* , backend/ot/* , frontend/src/ot.js , frontend/src/router/*
+sonar.exclusions=backend/db/**/* , backend/models/* , frontend/cypress/**/* , backend/ot/* , frontend/src/ot.js , frontend/src/router/* , frontend/src/components/Conference/Canvas.vue
 sonar.javascript.lcov.reportPaths=./frontend/coverage/lcov.info
 sonar.tests=./frontend/src/_tests_, ./backend/test
 sonar.test.inclusions=**/*.test.js
