--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "fabric": "^4.5.1",
     "jquery": "^3.6.0",
+    "one-colorpicker": "^1.0.12",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "uuid": "^8.3.2",
