--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,3 @@
 VUE_APP_API_BASE= 'http://localhost:3000'
 VUE_APP_WEB_BASE= 'ws://127.0.0.1:3000'
+VUE_APP_CONFERENCE_BASE= 'http://localhost:8080/conference'
