--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "sass-loader": "^8.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
+    "vue-clipboard2": "^0.3.1",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   }
